# EllipseEngine

./: .gitignore  ;a  CMakeLists.txt  README.md
CMake/: ProjectSettings.cmake  ProjectWarnings.cmake
Debug/: DebugScript.sh
Session/: session.vim
notes/: note1.md  notes.md
src/: CMakeLists.txt
src/App/: CMakeLists.txt
src/App/2D/Core/: DemoApp.cpp  DemoLayer.cpp  DemoLayer.hpp  Light.hpp  ModelList.hpp  ModelVal.hpp  main.cpp
src/App/3D/Core/: CubeMadeCube.hpp  DemoApp.cpp  DemoLayer.cpp  DemoLayer.hpp  GUILayer.cpp  GUILayer.hpp  Material.hpp  ModelList.hpp  ModelList2D.hpp  Weapon.hpp  main.cpp
src/App/Core/: CubeMadeCube.hpp  DemoApp.cpp  DemoLayer.cpp  DemoLayer.hpp  GUILayer.cpp  GUILayer.hpp  Light.hpp  ModelList.hpp  ModelList2D.hpp  ModelVal.hpp  Weapon.hpp  main.cpp
src/EllipseEngine2D/: CMakeLists.txt
src/EllipseEngine2D/Engine2D/: CMakeLists.txt
src/EllipseEngine2D/Engine2D/src/Core/: CMakeLists.txt
src/EllipseEngine2D/Engine2D/src/Core/Core/: RenderModule.cpp  RenderModule.hpp
src/EllipseEngine3D/: CMakeLists.txt
src/EllipseEngine3D/Engine3D/: CMakeLists.txt
src/EllipseEngine3D/Engine3D/src/: CMakeLists.txt
src/EllipseEngine3D/Engine3D/src/Core/: CMakeLists.txt
src/EllipseEngine3D/Engine3D/src/Core/Core/: RenderModule.cpp  RenderModule.hpp
src/Engine/: CMakeLists.txt
src/Engine/Engine/: CMakeLists.txt  Ellipse.hpp  EllipsePCH.hpp
src/Engine/Engine/Assets/Shader/: Light.vert.glsl  Triangle.frag.glsl  Triangle.vert.glsl
src/Engine/Engine/Core/: Application.cpp  Application.hpp  Base.hpp  Formatter.hpp  GraphicsContext.cpp  GraphicsContext.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Math.hpp  ModelManagerModule.cpp  ModelManagerModule.hpp  MouseCodes.hpp  OSTime.cpp  OSTime.hpp  TimeModule.hpp  Types.hpp  Utils.hpp  Window.cpp  Window.hpp
src/Engine/Engine/Core/Utils/: VectorSharedIteratorHeap.hpp
src/Engine/Engine/Debug/Log/: Log.cpp  Log.cppa  Log.hpp
src/Engine/Engine/Engine/: Engine.cpp  Engine.hpp  Module.hpp  System.hpp
src/Engine/Engine/Event/: Event.hpp  KeyboardEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
src/Engine/Engine/Input/: Input.hpp
src/Engine/Engine/Math/: Matrix.cpp  Matrix.hpp  TrigonometricUnits.hpp
src/Engine/Engine/Math/Random/: Random.cpp  Random.hpp
src/Engine/Engine/Platform/GraphicsContext/: SDLGraphicsContext.cpp  SDLGraphicsContext.hpp
src/Engine/Engine/Platform/RenderPlugin/OpenGL/: GLRenderPlugin.cpp  GLRenderPlugin.hpp  OpenGLObj.cpp  OpenGLObj.hpp
src/Engine/Engine/Platform/Window/SDLWindow/: SDLWindow.cpp  SDLWindow.hpp  SDLWindowInput.cpp
src/Engine/Engine/Renderer/: Draw2D.hpp  RenderModule.cpp  RenderModule.hpp  RenderObj.cpp  RenderObj.hpp  RenderPlugin.cpp  RenderPlugin.hpp  Renderer.cpp  Renderer.hpp  UniformVarible.hpp  VerticiesData.hpp
src/EngineInterface/: CMakeLists.txt
src/EngineInterface/Engine/: CMakeLists.txt  Ellipse.hpp  EllipsePCH.hpp
src/EngineInterface/Engine/Assets/Models/: Cube.glb
src/EngineInterface/Engine/Assets/Shader/: Cube.frag.glsl  CubeNoLight.frag.glsl  CubeNoLight.vert.glsl  Light.frag.glsl  Quad.frag.glsl  Quad.vert.glsl  Sqaure.vert.glsl  Triangle.frag.glsl  Triangle.frag.glsla1
src/EngineInterface/Engine/Assets/Shader/Engine2D/src/: CMakeLists.txt
src/EngineInterface/Engine/Assets/Shader/Engine2D/src/Core/Core/: RenderModule.cpp
src/EngineInterface/Engine/Core/: Application.cpp  Application.hpp  Base.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Layer.hpp  LayerStack.hpp  ModelManagerModule.cpp  ModelManagerModule.hpp  MouseInformation.hpp  ScanCodes.hpp  TimeModule.hpp  Utils.hpp  Window.cpp  Window.hpp
src/EngineInterface/Engine/Core/Details/: MousePosition.hpp
src/EngineInterface/Engine/Core/Utils/: VectorSharedIteratorHeap.hpp
src/EngineInterface/Engine/Debug/: Log.cpp  Log.hpp
src/EngineInterface/Engine/Engine/: Engine.cpp  Engine.hpp  Module.hpp
src/EngineInterface/Engine/Event/: KeyboardEvent.hpp  MouseEvent.hpp
src/EngineInterface/Engine/Math/: LinearFunc.hpp  Matrix.hpp  TrigonometricUnits.hpp
src/EngineInterface/Engine/Math/Random/: Random.cpp
src/EngineInterface/Engine/Platform/GraphicsContext/: SDLGraphicsContext.cpp  SDLGraphicsContext.hpp
src/EngineInterface/Engine/Platform/RenderPlugin/OpenGL/: GLRenderPlugin.cpp  GLRenderPlugin.hpp  OpenGLObj.cpp  OpenGLObj.hpp
src/EngineInterface/Engine/Platform/Window/SDLWindow/: SDLWindow.cpp  SDLWindow.hpp
src/EngineInterface/Engine/Renderer/: RenderModule.cpp  RenderModule.hpp  RenderObj.hpp  RenderPlugin.cpp  RenderPlugin.hpp  Renderer.cpp  Renderer.hpp  Shape.hpp  UniformVarible.hpp
